<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dpiotr.ocreader.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.44"
            android:padding="10dp"
            android:text="@string/scan_results"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="41dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/ic_edit_black_24dp"
            android:text="@string/scan_button_text"
            />


        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/ic_save_black_24dp"
            android:text="@string/scan_button_text" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:fillViewport="true"
        android:layout_weight="1"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scanResultField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingBottom="5dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:text="@string/open_button_text"
            android:src="@drawable/ic_insert_photo_48dp"
            android:background="@null"
            android:id="@+id/openButton"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/scan_button_text"
            android:src="@drawable/ic_camera_48dp"
            android:background="@null"
            android:id="@+id/scanButton"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/open_in_other_button_text"
            android:src="@drawable/ic_apps_48dp"
            android:background="@null"
            android:id="@+id/openInOtherButton"/>
    </LinearLayout>



</LinearLayout>
